Updated typo in project description

--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -5,7 +5,7 @@ author_email: ottosellerstam@gmail.com
 author_name: Otto Sellerstam
 description: A toy project, building a truly async file IO using io_uring, and on
     it building a custom event loop, as well as integration into asyncio's native
-    event loop"
+    event loop
 include_github_actions: true
 license: MIT
 packages:
