--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,6 +96,8 @@ ignore = [
     "ARG",     # unused arguments (fixtures)
     "FBT",     # booleans as positional args (test parametrize)
 ]
+"examples/*" = ["INP001"]
+
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
