Enabled native coroutine based Tasks, and added example for using native coroutines with one_ring_loop

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,7 +96,7 @@ ignore = [
     "ARG",     # unused arguments (fixtures)
     "FBT",     # booleans as positional args (test parametrize)
 ]
-"examples/*" = ["INP001"]
+"examples/*" = ["INP001", "T201"]
 
 
 [tool.ruff.lint.pydocstyle]
