--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,6 +36,7 @@ plugins:
             - one-ring-core/src
             - one-ring-loop/src
             - one-ring-asyncio/src
+            - one-ring-http/src
           options:
             show_source: true
             show_root_heading: true
@@ -53,4 +54,6 @@ nav:
       - Overview: one-ring-loop/overview.md
   - "one-ring-asyncio":
       - Overview: one-ring-asyncio/overview.md
+  - "one-ring-http":
+      - Overview: one-ring-http/overview.md
   - API Reference: api/
