--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "one-ring-core",
     "one-ring-loop",
     "one-ring-asyncio",
+    "one-ring-http",
 ]
 
 [tool.uv.workspace]
